Fix broken styles for team page

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -269,7 +269,8 @@ main {
         padding: 12px;
       	float: left;
         overflow: hidden;
-
+        width: 100%;
+        
         img {
             width: 100%;
         }
